<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_normal">

            <sg.vinova.noticeboard.widgets.AppTextView
                style="@style/GrayTextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/profile_name" />

            <sg.vinova.noticeboard.widgets.AppEditText
                android:id="@+id/edtName"
                style="@style/WhiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:singleLine="true"
                android:hint="@string/hint_name"
                />

            <sg.vinova.noticeboard.widgets.AppTextView
                style="@style/GrayTextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:text="@string/profile_email" />

            <sg.vinova.noticeboard.widgets.AppEditText
                android:id="@+id/edtEmail"
                style="@style/WhiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:enabled="false"
                android:hint="@string/hint_email" />

            <sg.vinova.noticeboard.widgets.AppTextView
                style="@style/GrayTextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:text="@string/profile_phone" />

            <sg.vinova.noticeboard.widgets.AppEditText
                android:id="@+id/edtPhone"
                style="@style/WhiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:inputType="number"
                android:lines="1"
                android:maxLines="1"
                android:hint="@string/hint_phone" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>