<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_normal">

            <sg.vinova.noticeboard.widgets.AppTextView
                style="@style/GrayTextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_password" />

            <sg.vinova.noticeboard.widgets.AppEditText
                android:id="@+id/edtOldPass"
                style="@style/WhiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/type_old_password"
                tools:text="Jacky001" />

            <sg.vinova.noticeboard.widgets.AppTextView
                style="@style/GrayTextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:text="@string/new_password" />

            <sg.vinova.noticeboard.widgets.AppEditText
                android:id="@+id/edtNewPass"
                style="@style/WhiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:inputType="textPassword"
                android:hint="@string/type_new_password"
                android:singleLine="true"
                tools:text="123456" />

            <sg.vinova.noticeboard.widgets.AppTextView
                style="@style/GrayTextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:text="@string/confirm_new_password" />

            <sg.vinova.noticeboard.widgets.AppEditText
                android:id="@+id/edtNewPassConfirm"
                style="@style/WhiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:hint="@string/hint_confirm_new_password"
                tools:text="123456789" />

            <sg.vinova.noticeboard.widgets.AppButton
                android:id="@+id/btnConfirmChange"
                style="@style/WhiteButton"
                android:layout_width="@dimen/width_button"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/space_normal"
                android:text="@string/confirm_change" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>